# calculator

./: .clang-tidy  CMakeLists.txt  README.md
src/: main.cpp
test/: test.sh
